Drag n Drop using jQuery UI has been abandoned, replaced with Rubaxa.  Must faster but not working yet; seems to only support one sortable on a container at a time.  Should design toggle switch for category vs tile.

--- a/tiles.html
+++ b/tiles.html
@@ -23,6 +23,11 @@
     {{#if userExists}}
       {{> navbar}}
       {{> yield region="tiles"}}
+      {{#if currentUser}}
+        <div class="progress">
+          <div class="indeterminate"></div>
+        </div>
+      {{/if}}
     {{/if}}
     {{#if noUsers}}
       <div id="register-form-container" class="valign-wrapper">
