--- a/tiles.html
+++ b/tiles.html
@@ -92,27 +92,37 @@
         <a href="#" id="brand-top-right"><i class="mdi-action-view-module"> TilesJS</i></a>
       </li>
     {{#if verify currentUser}}
-      <li>
-        <a class="add-new-tile"><i class="mdi-content-add-box left"> New Tile</i></a>
-      </li>
-      <li>
-        <a data-sort-tiles>
-          {{#if tileSortActive}}
-            <i class="mdi-action-done left"> Done</i>
-          {{else}}
-            <i class="mdi-content-sort left"> Sort Tiles</i>
-          {{/if}}
-        </a>
-      </li>
-      <li>
-        <a data-sort-categories>
-          {{#if categorySortActive}}
-            <i class="mdi-action-done left"> Done</i>
-          {{else}}
-            <i class="mdi-content-sort left"> Sort Categories</i>
-          {{/if}}
-        </a>
-      </li>
+      {{#unless tileSortActive}}
+        {{#unless categorySortActive}}
+          <li>
+            <a class="add-new-tile"><i class="mdi-content-add-box left"> New Tile</i></a>
+          </li>
+        {{/unless}}
+      {{/unless}}
+      {{#if categories}}
+        {{#unless categorySortActive}}
+          <li>
+            <a data-sort-tiles>
+              {{#if tileSortActive}}
+                <i class="mdi-action-done left"> Done</i>
+              {{else}}
+                <i class="mdi-content-sort left"> Sort Tiles</i>
+              {{/if}}
+            </a>
+          </li>
+        {{/unless}}
+        {{#unless tileSortActive}}
+          <li>
+            <a data-sort-categories>
+              {{#if categorySortActive}}
+                <i class="mdi-action-done left"> Done</i>
+              {{else}}
+                <i class="mdi-content-sort left"> Sort Categories</i>
+              {{/if}}
+            </a>
+          </li>
+        {{/unless}}
+      {{/if}}
       <li>
         <a data-logout><i class="mdi-action-done-all left"> Sign Out</i></a>
       </li>
