Changed Materialize package to materialize:materialize (official).  Minor fix to loading icon which was not centering correctly after this change.  Changed registration screen around to feature URL first and then splitting into two columns for social media vs new account registration.  URLs now disallow slashes explicitly.  Social media login currently disabled due to user validation.  This ought to be removed and replaced with a URL setter screen on user login.

--- a/tiles.html
+++ b/tiles.html
@@ -151,34 +151,40 @@
   <div id="register-form-container" class="valign-wrapper">
     <form id="register-form">
       <div class="input-field">
-        <i class="mdi-social-person prefix"></i>
-        <input id="user-profile-name" type="text"/>
-        <label for="user-profile-name">Your Name</label>
-      </div>
-      <div class="input-field">
-        <i class="mdi-communication-email prefix"></i>
-        <input id="user-email" type="email"  />
-        <label for="user-email">E-mail</label>
-      </div>
-      <div class="input-field">
-        <i class="mdi-action-lock prefix"></i>
-        <input id="user-password" type="password"/>
-        <label for="user-password">Password</label>
-      </div>
-      <div class="input-field">
-        <i class="mdi-action-lock prefix"></i>
-        <input id="user-password-confirm" type="password"/>
-        <label for="user-password-confirm">Confirm Password</label>
-      </div>
-      <div class="input-field">
         <i class="mdi-social-public prefix"></i>
         <input id="user-url" type="text"/>
         <label for="user-url">Public URL</label>
       </div>
-      <button id="save-tile-edit" type="submit" class="btn waves-effect waves-light modal-action red"><i class="mdi-content-send right"></i>Sign Up</button>
+      <div id="register-options">
+        <div class="left valign-wrapper">
+          {{> socialLogin action="register" }}
+        </div>
+        <div class="right">
+          <div class="input-field">
+            <i class="mdi-social-person prefix"></i>
+            <input id="user-profile-name" type="text"/>
+            <label for="user-profile-name">Your Name</label>
+          </div>
+          <div class="input-field">
+            <i class="mdi-communication-email prefix"></i>
+            <input id="user-email" type="email"  />
+            <label for="user-email">E-mail</label>
+          </div>
+          <div class="input-field">
+            <i class="mdi-action-lock prefix"></i>
+            <input id="user-password" type="password"/>
+            <label for="user-password">Password</label>
+          </div>
+          <div class="input-field">
+            <i class="mdi-action-lock prefix"></i>
+            <input id="user-password-confirm" type="password"/>
+            <label for="user-password-confirm">Confirm Password</label>
+          </div>
+          <button id="save-tile-edit" type="submit" class="btn waves-effect waves-light modal-action red"><i class="mdi-content-send right"></i>Sign Up</button>
+        </div>
+        <div style="clear: both"></div>
+      </div>
     </form>
-    <div class="or-divider">or</div>
-    {{> socialLogin action="register" }}
   </div>
 </template>
 
