Removed colour density graph image (what the fuck was that doing in there?)  Fixed indentation of return in tileEditModal .set(data) routine; tileEditModal inputs now clear/populate correctly.

--- a/tiles.html
+++ b/tiles.html
@@ -156,7 +156,7 @@
 <template name="establishURL">
   <form id="verify-url">
     <div class="input-field">
-      <i class="mdi-social-public prefix"></i>
+      <i class="mdi-social-public left prefix">http://{{hostname}}/</i>
       <input id="user-url" type="text"/>
       <label for="user-url">Public URL</label>
     </div>
